# pdf2xlsx

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
gradio_app/: app.py
pdf2xlsx/: __init__.py  cli.py  converter.py  gradio_app.py
